--- a/node-web-server/package.json
+++ b/node-web-server/package.json
@@ -1,7 +1,11 @@
 {
   "name": "node-web-server",
   "version": "1.0.0",
-  "description": "",
+  "engines": {
+    "node": "10.6.0",
+    "npm": "6.x"
+  },
+  "description": "Test app to run in heroku",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
