--- a/node-todo-api/package.json
+++ b/node-todo-api/package.json
@@ -10,8 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
-    "express": "^4.16.4",
     "mongodb": "^3.1.13",
     "mongoose": "^5.4.14"
+  },
+  "devDependencies": {
+    "express": "^4.16.4"
   }
 }
