--- a/node-todo-api/package.json
+++ b/node-todo-api/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha server/tests/*.test.js",
+    "test-watch": "nodemon --exec npm test"
   },
   "author": "",
   "license": "ISC",
@@ -14,6 +15,10 @@
     "mongoose": "^5.4.14"
   },
   "devDependencies": {
-    "express": "^4.16.4"
+    "expect": "^24.1.0",
+    "express": "^4.16.4",
+    "mocha": "^6.0.0",
+    "nodemon": "^1.18.10",
+    "supertest": "^3.4.2"
   }
 }
